--- a/mesmerize-child/style.css
+++ b/mesmerize-child/style.css
@@ -2,13 +2,10 @@
 CTC Separate Stylesheet
 Updated: 2019-03-01 13:25:43
 Theme Name: Mesmerize Child
-Theme URI: https://extendthemes.com/go/mesmerize-home/
 Template: mesmerize
-Author: Horea Radu
-Author URI: https://extendthemes.com/
-Description: Mesmerize is an incredibly flexible, multipurpose WordPress theme that can help you create an amazing website easier than ever, by drag and drop. It comes with a predesigned home page, 5 header designs and over 30 ready to use content sections that you can easily customize. It also has lots of customization options (video background, slideshow background, header content types, gradient overlays, etc) that will help you create a beautiful, unique website in no time. Mesmerize is responsive so it works on mobile devices out of the box and it is also WooCommerce ready. DEMO: https://extendthemes.com/go/mesmerize-demos/
-Tags: entertainment,food-and-drink,portfolio,one-column,two-columns,right-sidebar,grid-layout,custom-header,custom-menu,custom-logo,full-width-template,theme-options,translation-ready,featured-images,threaded-comments
-Version: 1.6.81.1551446743
+Author: Joe Wigley
+Description: A portfolio design taken from the Mesmerize theme
+Version: 1.1.1
 */
 
 
